Présentation de l'entreprise (figures manquantes).

--- a/rapport.tex
+++ b/rapport.tex
@@ -208,8 +208,7 @@
 \renewcommand{\footrulewidth}{0pt}
 
 
-
-%\include{Chapitre1/chapitre1}
+\include{Chapitre1/chapitre1}
 %\include{Chapitre2/chapitre2}
 
 
