Développement de la nomenclature du rapport.

--- a/rapport.tex
+++ b/rapport.tex
@@ -182,6 +182,11 @@
 
 \include{Chapitre1/chapitre1}
 \include{Chapitre2/chapitre2}
+\include{Chapitre3/chapitre3}
+\include{Chapitre4/chapitre4}
+\include{Chapitre5/chapitre5}
+\include{Chapitre6/chapitre6}
+\include{Chapitre7/chapitre7}
 
 
 %%%%%%%% Figures
