Amélioration du contenu existant.

--- a/rapport.tex
+++ b/rapport.tex
@@ -28,6 +28,10 @@
 \usepackage[leftcaption]{sidecap}
 \usepackage[labelsep=endash, textfont={footnotesize, singlespacing}, margin=10pt, format=plain, labelfont=bf]{caption}
 \usepackage[Conny]{Classes/fncychap} %en tete chapitrage
+\usepackage{amssymb}% http://ctan.org/pkg/amssymb % checkmark signs
+\usepackage{pifont}% http://ctan.org/pkg/pifont % checkmark signs
+\newcommand{\cmark}{\ding{51}}% checkmark signs
+\newcommand{\xmark}{\ding{55}}% checkmark signs
 \newcommand{\ie}{c.-\`a-d.~}
 \hbadness=10000% pb d'overfull box réglé
 \hfuzz=50pt
