--- a/Biblio/aesm_edspia.bib
+++ b/Biblio/aesm_edspia.bib
@@ -1,2 +1,130 @@
 % This file was created with JabRef 2.3.1.
 % Encoding: UTF8
+
+@Book{UML,
+author = {Dan Pilone,NeilPitman},
+title = {UML 2.0 in Nutshell},
+year = {publié le Juin 2005},
+}
+
+@Book{RUP,
+author = {Phillipe Kruchten},
+title = {The Rational Unified Process : An Introduction},
+year = {publié le 10 Décembre 2003},
+}
+
+@Book{XP,
+author = {Kent Beck},
+title = {Extreme Programming Explained: Embrace change},
+year = {publié le 26 novembre 2014},
+}
+
+@Book{SCRUM,
+author = {Ken Schwaber et Jeff Sutherland},
+title = {Le Guide SCRUM},
+year = {publié en juillet 2013},
+}
+
+@Book{RAD,
+author = {James Martin},
+title = {Rapid Application Development},
+year = {1991},
+}
+
+@misc{Fitnet,
+  howpublished = "\url{http://www.fitnetmanager.com/crm-avant-vente}",
+  note = "[En ligne; consulté le 21-Juin-2015]"
+}
+
+@misc{Everwin,
+  howpublished = "\url{http://www.everwin.fr/solutions}",
+  note = "[En ligne; consulté le 21-Juin-2015]"
+}
+
+@misc{Dolibarr,
+  howpublished = "\url{http://www.dolibarr.fr/}",
+  note = "[En ligne; consulté le 22-Juin-2015]"
+}
+
+@misc{AvantageScrum,
+  howpublished = "\url{https://stefanini.com/FR/2014/03/les_avantages_de_la_methode_scrum/}",
+  note = "[En ligne; consulté le 24-Juin-2015]"
+}
+
+@misc{Package,
+  howpublished = "\url{https://fr.wikipedia.org/wiki/Paquet_(logiciel)}",
+  note = "[En ligne; consulté le 13-Septembre-2015]"
+}
+
+@misc{MVC,
+  howpublished = "\url{https://netbeans.org/}",
+  note = "[En ligne; consulté le 31-Août-2015]"
+}
+
+@misc{Netbeans,
+  howpublished = "\url{http://blog.nicolashachet.com/technologies/php/rex-zend-2-vs-symfony-2/}",
+  note = "[En ligne; consulté le 09-Septembre-2015]"
+}
+
+@misc{Sf2vsZf2,
+  howpublished = "\url{https://fr.wikipedia.org/wiki/Modèle-vue-contrôleur}",
+  note = "[En ligne; consulté le 31-Août-2015]"
+}
+
+@misc{cookBook,
+  howpublished = "\url{http://symfony.com/fr/doc/current/cookbook/index.html}",
+  note = "[En ligne; consulté le 31-Août-2015]"
+}
+
+@misc{Dbal,
+  howpublished = "\url{https://packagist.org/}",
+  note = "[En ligne; consulté le 13-Septembre-2015]"
+}
+
+@misc{Bundles,
+  howpublished = "\url{http://symfony.com/fr/doc/current/cookbook/doctrine/dbal.html}",
+  note = "[En ligne;L'un des sites les plus connues pour l'intégration des bundles, consulté le 01-Septembre-2015]"
+}
+
+@misc{Highcharts,
+  howpublished = "\url{http://www.highcharts.com/}",
+  note = "[En ligne; consulté le 01-Septembre-2015]"
+}
+
+@misc{Bootstrap,
+  howpublished = "\url{http://getbootstrap.com/}",
+  note = "[En ligne; consulté le 01-Septembre-2015]"
+}
+
+@misc{BootstrapGit,
+  howpublished = "\url{https://github.com/twbs/bootstrap}",
+  note = "[En ligne; consulté le 01-Septembre-2015]"
+}
+
+@misc{JqueryUi,
+  howpublished = "\url{http://jqueryui.com/}",
+  note = "[En ligne; consulté le 01-Septembre-2015]"
+}
+
+@misc{AngularJs,
+  howpublished = "\url{https://angularjs.org/}",
+  note = "[En ligne; consulté le 13-Septembre-2015]"
+}
+
+@misc{IHM,
+  howpublished = "\url{http://blocnotes.iergo.fr/concevoir/les-criteres-heuristiques-de-bastien-et-scapin/}",
+  note = "[En ligne; consulté le 14-Septembre-2015]"
+}
+
+@misc{AgManifesto,
+  howpublished = "\url{http://www.agilemanifesto.org/iso/en/principles.html}",
+  note = "[En ligne; consulté le 14-Septembre-2015]"
+}
+
+@misc{Latex,
+  author = {Mr. Latex},
+  title = {{Débuter avec Latex}},
+  howpublished = "\url{www.latex.com}",
+  year = {2008},
+  note = "[En ligne; consulté le 19-Juillet-2008]"
+}
